--- a/JuliasWebApp.API/appsettings.json
+++ b/JuliasWebApp.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source = juliaswebapp.db"
+  }, 
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
