--- a/AnimalShelter-SPA/package.json
+++ b/AnimalShelter-SPA/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
     "@auth0/angular-jwt": "^5.0.1",
+    "alertify": "^0.3.0",
     "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^5.6.1",
