Added styling, alertify, jwtHelper

--- a/AnimalShelter-SPA/package.json
+++ b/AnimalShelter-SPA/package.json
@@ -21,7 +21,9 @@
     "@angular/router": "~9.1.11",
     "@auth0/angular-jwt": "^5.0.1",
     "alertify": "^0.3.0",
+    "alertifyjs": "^1.13.1",
     "bootstrap": "^4.5.0",
+    "bootswatch": "^4.5.0",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^5.6.1",
     "rxjs": "~6.5.4",
