--- a/AnimalShelter-SPA/package.json
+++ b/AnimalShelter-SPA/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
     "@auth0/angular-jwt": "^5.0.1",
+    "@kolkov/ngx-gallery": "^1.2.3",
     "alertify": "^0.3.0",
     "alertifyjs": "^1.13.1",
     "bootstrap": "^4.5.0",
