Fixed delete, set main, get animal mapping issue

--- a/AnimalShelter.API/appsettings.json
+++ b/AnimalShelter.API/appsettings.json
@@ -14,5 +14,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  
+  "CloudinarySettings": {
+    "CloudName": "dxpv3aazl",
+    "ApiKey": "146435224116871",
+    "ApiSecret": "4_rEP1vNC1Ssq19ppulYtx_2pwc"
+  },
+
   "AllowedHosts": "*"
 }
