--- a/AnimalShelter.API/AnimalShelter.API.csproj
+++ b/AnimalShelter.API/AnimalShelter.API.csproj
@@ -12,5 +12,6 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.6"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1"/>
     <PackageReference Include="CloudinaryDotNet" Version="1.11.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.2"/>
   </ItemGroup>
 </Project>
